# mapping_pie_dispenser

./: .gitignore  LICENSE  MANIFEST.in  README.md  pyproject.toml
mpd/: __init__.py  db.py  party.py  test.sqlite
mpd/templates/: base.html  create.html  edit.html  list.html  party.html  piece.html
