[project]
name = "mapping-pie-dispenser"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "authlib>=1.5.2",
    "click>=8.1.8",
    "flask>=3.1.0",
    "qrcode>=8.2",
    "requests>=2.32.3",
]

[tool.setuptools]
packages = ["mpd"]
