[project]
name = "mapping-pie-dispenser"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "authlib>=1.5.2",
    "click>=8.1.8",
    "flask>=3.1.0",
    "gunicorn>=23.0.0",
    "qrcode>=8.2",
    "requests>=2.32.3",
]

[build-system]
requires = ["setuptools >= 77.0.3"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["mpd"]
